--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,10 @@
 body {
     text-align: center;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    body {
+      background-color: lightblue;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+ }}
