--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 310px;
+    width: 19.5rem;
     overflow: hidden;
 }
