--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@ body {
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     body {
-      background-color: lightblue;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
- }}
+        background-color: lightblue;
+  
+   }
+}
