--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,25 +23,15 @@ button {
   border: 0;
   border-radius: .3rem;
   background-color: var(--white);
+
 }
 
 button:hover, button:focus {
   color: var(--white);
-  box-shadow: inset 7em 0 0 0 var(--gray-700);
+  outline: 0;
+  background-color: var(--gray-800);
 }
   
-.header__buttons {
-  display: flex;
-  gap: .5rem;
-  justify-content: center;
-}
-
-.header__buttons:hover,
-.header__buttons:hover {
-  display: flex;
-  gap: .5rem;
-  justify-content: center;
-}
 
 .main {
   width: 100vw;
@@ -68,7 +58,11 @@ button:hover, button:focus {
 
 @media screen and (min-width: 768px) and (max-width: 1248px) {
   .header__buttons {
-    display: block;
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+
+
   }
   .cards-container {
     display: flex;
@@ -81,7 +75,9 @@ button:hover, button:focus {
 
 @media screen and (min-width: 1248px) {
     .header__buttons {
-        display: block;
+        display: flex;
+        justify-content: center;
+        gap: 1.5rem;
       }
     .cards-container{
         display: grid;
