--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
 
 button {
   color: var(--gray-900);
-  transition: 0.25s;
+  transition: .4s;
   padding: .4rem .6rem;
   outline: solid ;
   border: 0;
