--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,24 @@ body {
   text-align: center;
 }
 
+button {
+  color: var(--gray-900);
+  transition: .4s;
+  padding: .4rem .6rem;
+  outline: solid ;
+  border: 0;
+  border-radius: .3rem;
+  background-color: var(--white);
+
+}
+
+button:hover, button:focus {
+  color: var(--white);
+  outline: 0;
+  background-color: var(--gray-800);
+}
+  
+
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   body {
     background-color: lightblue;
