--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,23 +15,6 @@
   
 }
 
-button {
-  color: var(--gray-900);
-  transition: .4s;
-  padding: .4rem .6rem;
-  outline: solid ;
-  border: 0;
-  border-radius: .3rem;
-  background-color: var(--white);
-
-}
-
-button:hover, button:focus {
-  color: var(--white);
-  outline: 0;
-  background-color: var(--gray-800);
-}
-  
 
 .main {
   width: 100vw;
@@ -52,8 +35,16 @@ button:hover, button:focus {
   width: 19.5rem;
   background-color: var(--white);
   box-shadow: var(--shadow);
-  height: 35rem;
-  border-radius: 0.5rem;
+  height: 30rem;
+  border-radius: 0.3rem;
+  background-color: var(--gray-300);
+
+}
+
+.card__image {
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1248px) {
