--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,12 +11,12 @@ body {
 }
 
 button {
-  color: var(--gray-900);
+  color: var(--gray-700);
   transition: .4s;
-  padding: .4rem .6rem;
-  outline: solid ;
+  padding: .3rem .6rem;
+  outline: solid var(--gray-700);
   border: 0;
-  border-radius: .3rem;
+  border-radius: .2rem;
   background-color: var(--white);
 
 }
