--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,13 +12,16 @@
   --gray-900: hsl(0, 0%, 10%);
   --black: hsl(0, 0%, 0%);
   --white: hsl(0, 0%, 100%); 
+  --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   
 }
 
 
 .main {
   width: 100vw;
-  padding: 0 1rem;
+  padding: 0 2rem;
+  margin: auto;
+  background-color: red;
 }
 
 .header__buttons {
@@ -26,6 +29,8 @@
 }
 
 .cards-container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   overflow: hidden;
   text-align: center;
@@ -34,10 +39,13 @@
 .card {
   width: 19.5rem;
   background-color: var(--white);
-  box-shadow: var(--shadow);
+  box-shadow: var(--box-shadow);
   height: 30rem;
   border-radius: 0.3rem;
-  background-color: var(--gray-300);
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  justify-content: space-between;
 
 }
 
@@ -45,6 +53,9 @@
   width: 100%;
   height: 20rem;
   object-fit: cover;
+}
+.card__content {
+  padding: 0 1rem 1rem 1rem;
 }
 
 .card__footer {
@@ -63,7 +74,7 @@
   .cards-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    /* gap: 1.5rem; */
     justify-content: center;
   }
 }
