--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,9 +38,9 @@
 
 .card {
   width: 19.5rem;
+  height: 32rem;
   background-color: var(--white);
   box-shadow: var(--box-shadow);
-  height: 30rem;
   border-radius: 0.3rem;
   display: flex;
   flex-direction: column;
@@ -55,7 +55,11 @@
   object-fit: cover;
 }
 .card__content {
-  padding: 0 1rem 1rem 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .card__footer {
