--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,7 +16,6 @@
   
 }
 
-
 .main {
   width: 100vw;
   padding: 0 .5rem;
@@ -42,13 +41,15 @@
   align-items: center;
   overflow: hidden;
   text-align: center;
-  gap: 1.5rem;
+  gap: 1rem;
+  padding-bottom: .5rem;
 }
 .cards__title {
-  padding: .5rem 0;
+  padding: 3rem 0 .5rem 0;
   text-align: start;
   border-bottom: solid var(--gray-400);
-  width: 100%;
+  width: 19.5rem;
+  margin-bottom: 1rem;
 }
 .card {
   width: 19.5rem;
@@ -76,14 +77,25 @@
   height: 100%;
 }
 .card__title {
+  padding-top: 1rem;
   font-size: 1.5rem;
 }
 .card__footer {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
+}
+
+.card__buttons {
+  display: flex;
+  gap: 1rem;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1364px) {
+  .header__title{
+    padding-top: 5rem;
+  }
+  
   .header__buttons {
     display: flex;
     justify-content: center;
@@ -100,6 +112,7 @@
     margin: auto;
   }
   .cards__title {
+    width: 100%;
     grid-row: 1;
     grid-column: 1 / 3;
   }
@@ -107,11 +120,19 @@
 
 
 @media screen and (min-width: 1364px) {
+  .header__title{
+    padding-top: 5rem;
+  }
 
     .header__buttons {
         display: flex;
         justify-content: center;
         gap: 1.5rem;
+      }
+      .cards__title {
+        width: 98%;
+        grid-row: 1;
+        grid-column: 1 / 5;
       }
     .cards-container{
         display: grid;
