--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
-@import "./index.css";
+@import url("./index.css");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   color: var(--gray-800);
 }
 
