--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,18 @@
 :root {
-  --gray-100: hsl(0, 0%, 95%);
-  --gray-200: hsl(0, 0%, 85%);
-  --gray-300: hsl(0, 0%, 75%);
-  --gray-400: hsl(0, 0%, 65%);
-  --gray-500: hsl(0, 0%, 50%);
-  --gray-600: hsl(0, 0%, 40%);
-  --gray-700: hsl(0, 0%, 30%);
-  --gray-800: hsl(0, 0%, 20%);
-  --gray-900: hsl(0, 0%, 10%);
-  --black: hsl(0, 0%, 0%);
-  --white: hsl(0, 0%, 100%); 
-  --box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  
+  --gray-100: hsl(0deg 0% 95%);
+  --gray-200: hsl(0deg 0% 85%);
+  --gray-300: hsl(0deg 0% 75%);
+  --gray-400: hsl(0deg 0% 65%);
+  --gray-500: hsl(0deg 0% 50%);
+  --gray-600: hsl(0deg 0% 40%);
+  --gray-700: hsl(0deg 0% 30%);
+  --gray-800: hsl(0deg 0% 20%);
+  --gray-900: hsl(0deg 0% 10%);
+  --black: hsl(0deg 0% 0%);
+  --white: hsl(0deg 0% 100%);
+  --box-shadow: 0px 2px 8px 0px rgba(99 99 99 / 20%);
 }
+
 
 .main {
   width: 100vw;
