--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,6 +18,7 @@
   padding: 0 0.5rem;
   margin: auto;
 }
+
 .header__title {
   padding-top: 1rem;
 }
@@ -25,6 +26,7 @@
 .header__subtitle {
   padding: 1rem;
 }
+
 .header__buttons {
   padding-top: 1rem;
   display: none;
@@ -42,7 +44,7 @@
 }
 
 .cards__title {
-  padding: 3rem 0 0.5rem 0;
+  padding: 3rem 0 0.5rem;
   text-align: start;
   border-bottom: solid var(--gray-400);
   width: 19.5rem;
